fixed alignment

--- a/artnu/src/App.css
+++ b/artnu/src/App.css
@@ -5,11 +5,11 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  width: 100%;
 }
 /* filter things */
 .filters{
-  /*border: solid 1px black;*/
-  width: 550px;
+  width: auto;
 }
 
 .filters button {
@@ -38,7 +38,7 @@
   border: solid 1px #dbdbdb;
   margin-bottom: 30px;
   background-color: rgba(67, 6, 107, 0.377);
-  width: 500px;
+  width: 400px;
   height: fit-content;
   border-radius: 15px;
 }
@@ -56,14 +56,17 @@
   position: relative;
   margin-left: auto;
   margin-right: auto;
+  width: auto;
+  height: 400px;
+
 }
 
 .post-image{
   width: 100%;
-  height: auto;
+  height: 100%;
   position: relative;
   margin: auto;
-  /* object-fit: cover; */
+  object-fit: cover;
 }
 
 .post-price-box{
@@ -123,7 +126,8 @@
   background-color: white;
   position: fixed;
   bottom: 0;
-  width: 500px;
+  width: 100%;
+  justify-content: center;
   height: 50px;
   padding: 15px;
 }
@@ -136,7 +140,7 @@
   padding: 15px;
   border: none;
   border-radius: 10px;
-  width:  100%;
+  width:  fit-content;
 }
 
 .popup {
